--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,18 @@
 .height100vh {
-    min-height: 100vh !important;
+    height: 100vh;
+
+    
+}
+
+@media only screen and (max-width: 768px) {
+    .height100vh {
+        height: 12rem;
+    }
+}
+
+
+.table__img {
+    width: 5rem;
+    height: 5rem;
+    object-fit: cover;
 }
